--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fcc-learn-npm-package-json",
   "author": "Vouchik Morozov",
+  "description": "This is project for learning Backend on FreeCodeCamp",
   "dependencies": {
     "express": "^4.14.0"
   },
